Fix highlighting behavior of HoverButton

This CL fixes the highlighting behavior of
HoverButton by turning on highlight on focus.

Bug: 821354
Change-Id: I3d89aa1febd2dc1cd4e82d2291983eb09e7fbab4
Reviewed-on: https://chromium-review.googlesource.com/960024
Commit-Queue: Thomas Tangl <tangltom@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543047}
Former-commit-id: d953b6afdeae86ef9ce30fc520931d371f3e3f88